# osgStarter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  starter.cpp
